<resources>
    <string name="app_name">RadialWatchFace</string>

    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>

    <string name="preview">Preview</string>

    <string name="watch_color_header">Watch Color Scheme</string>
    <string name="set_face">Change Preset</string>
    <string name="set_custom">Custom Scheme</string>
    <string name="set_bg">Background Color</string>

    <string name="title_no_device_connected">No wearable device is currently connected.</string>
    <string name="ok_no_device_connected">OK</string>

    <string name="color_options">Set Colors</string>

    <string name="change_ring_1">Outer Ring Color</string>
    <string name="change_ring_2">Middle Ring Color</string>
    <string name="change_ring_3">Inner Ring Color</string>

    <string name="text_options">Text Options</string>
    <string name="set_text_color">Text Color</string>
    <string name="set_text_stroke_color">Text Stroke Color</string>
    <string name="text_color">Text Color</string>
    <string name="text_stroke_color">Text Stroke Color</string>
    <string name="swap_colors">Swap</string>
    <string name="show_text">Show Text</string>
    <string name="military_time">24 Hour Time</string>
    <string name="invert_text">Invert Text Colors</string>
    <string name="text_stroke">Show Text Stroke</string>
    <string name="text_size">Text Size</string>

    <string name="display_options">Display Options</string>
    <string name="sm_sec">Smooth Seconds Animation</string>
    <string name="gray_ambient">Grayscale on Ambient</string>

    <string name="donate">Donate</string>

    <string name="add_new">Add New Watchface</string>

    <string name="ring_size">Ring Size</string>

    <string name="reverse_ring_order">Reverse Ring Order</string>
    <string name="show_seconds">Show Seconds Ring</string>

    <string name="text_angle">Text Angle</string>

    <string name="donate_description">Thanks for considering donating, I hope you\'ve enjoyed my watch face.
    Please note that donating does not unlock extra features (at this time), it\'s completely voluntary and only exists because some users were looking for a way to donate. </string>
    <string name="cancel">Cancel</string>

</resources>
